# cpp-backend

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  envsetup.sh  gen-messages.sh  init.sh  pmgen.sh
CMakeModules/: FindPQ.cmake  (+11 more)
backend/: CMakeLists.txt
backend/src/job/: backend_context.cpp  backend_context.h
backend/src/main/: application.cpp  application.h  backend_const.h  backend_constants.h  main.cpp
backend/src/web_server/: invoice_request_handler.cpp  invoice_request_handler.h  payment_request_handler.cpp  payment_request_handler.h  web_server_controller.cpp  web_server_controller.h
engine/: CMakeLists.txt
engine/src/: engine.h
engine/src/core/: execution_context.cpp  execution_context.h  execution_loop.cpp  execution_loop.h  execution_service.cpp  execution_service.h  executor.cpp  executor.h  io_context.cpp  io_context.h
engine/src/db/: db_context.cpp  db_context.h  db_loop.cpp  db_loop.h  db_queue.cpp  db_queue.h
engine/src/event/: context_started_event.cpp  event.cpp  event.h  event_handler.cpp  event_handler.h  event_queue.cpp  event_queue.h  event_recipient.cpp  event_recipient.h  event_route.cpp  event_route.h  event_router.cpp  event_router.h
engine/src/events/: context_did_start_event.h  context_started_event.cpp  context_started_event.h  events.cpp  events.h
engine/src/io/: io_context.cpp  io_context.h  io_loop.cpp  io_loop.h  io_queue.cpp  io_queue.h  io_work_context.cpp  io_work_context.h
engine/src/job/: job_context.cpp  job_context.h  job_event_queue.cpp  job_event_queue.h  job_loop.cpp  job_loop.h  job_queue.cpp  job_queue.h
engine/src/main/: application.cpp  application.h  command_line_option_parser.cpp  command_line_option_parser.h  engine_const.h  engine_option_processor.cpp  engine_option_processor.h
engine/src/network/: internet_protocol.cpp  internet_protocol.h  ip.cpp  ip.h  socket.cpp  socket.h  socket_options.cpp  socket_options.h
engine/src/system/: system_context.cpp  system_context.h  system_event_queue.cpp  system_event_queue.h  system_loop.cpp  system_loop.h  system_queue.cpp  system_queue.h
engine/src/task/: task.cpp  task.h  task_handler.h  task_queue.cpp  task_queue.h  task_queue_delegate.h  task_relay.cpp  task_relay.h  task_router.cpp  task_router.h
engine/src/web/: go_memory.h  http_handler_service.cpp  http_handler_service.h  web_server_context.cpp  web_server_context.h  web_server_event_queue.cpp  web_server_event_queue.h  web_server_loop.cpp  web_server_loop.h  web_server_service.cpp  web_server_service.h  webserver_context.cpp  webserver_context.h  webserver_loop.cpp  webserver_loop.h  webserver_queue.cpp  webserver_queue.h  websocket_handler_service.cpp  websocket_handler_service.h
engine/src/work/: work_context.cpp  work_context.h  work_context_delegate.h  work_loop.cpp  work_loop.h  work_service.cpp  work_service.h  worker.cpp  worker.h  worker_pool.cpp  worker_pool.h
engine/uml/: design.mdj
framework/: CMakeLists.txt
framework/src/: framework.h
framework/src/config/: command_line_option_processor.cpp  command_line_option_processor.h  config.cpp  config.h
framework/src/data/: json.h
framework/src/logger/: log_manager.cpp  log_manager.h  logger.cpp  logger.h
framework/src/main/: constants.h  framework_const.h  framework_const_gen.h.in  ftamework_const.h  ftamework_constants.h  tools.h
framework/src/memory/: allocator.cpp  allocator.h  memory.h
framework/src/network/: endpoint.h  network.h
framework/src/scalar/: numeric.cpp  scalar.cpp  scalar.h  string.cpp
framework/src/string/: string.cpp  string.h
framework/src/time/: time.cpp  time.h
framework/src/util/: crucial.h  optional.h
libraries/engine/: CMakeLists.txt
libraries/engine/src/: engine.h
libraries/pmp/: CMakeLists.txt
libraries/pmp/src/: pmp.h
libraries/stl/: CMakeLists.txt
libraries/stl/src/: stl.h
library-groot/: CMakeLists.txt
library-groot/src/: groot.h
library-groot/src/algorythm/: algorythm.cpp  algorythm.h
library-groot/src/config/: command_line_argument_parser.cpp  command_line_argument_parser.h  command_line_option_processor.cpp  command_line_option_processor.h  config.cpp  config.h
library-groot/src/crypto/: checksum.cpp  checksum.h
library-groot/src/data/: json.h  uuid.h
library-groot/src/hardware/: hardware.cpp  hardware.h
library-groot/src/logger/: log_manager.cpp  log_manager.h  logger.cpp  logger.h
library-groot/src/main/: groot_consts.h  groot_consts_gen.h.in  platform.h  tools.h
library-groot/src/memory/: allocator.cpp  allocator.h  dynamic_memory_pool.cpp  dynamic_memory_pool.h  fixed_memory_pool.cpp  fixed_memory_pool.h  float_memory_pool.cpp  float_memory_pool.h  lockfree_memory_pool.cpp  lockfree_memory_pool.h  memory.cpp  memory.h  memory_pool.cpp  memory_pool.h  memory_pool_debug.cpp  memory_pool_debug.h  memory_pool_manager.h
library-groot/src/network/: endpoint.h  network.cpp  network.h
library-groot/src/scalar/: numeric.cpp  numeric.h  string.cpp  string.h
library-groot/src/time/: time.cpp  time.h
library-groot/src/util/: crucial.h  object_pool.h  optional.h
library-rocket/: CMakeLists.txt
library-rocket/src/: rocket.h
library-rocket/src/db/: db_context.cpp  db_context.h  db_loop.cpp  db_loop.h  db_queue.cpp  db_queue.h
library-rocket/src/io/: io_context.cpp  io_context.h  io_loop.cpp  io_loop.h  io_queue.cpp  io_queue.h
library-rocket/src/job/: job_context.cpp  job_context.h  job_loop.cpp  job_loop.h  job_queue.cpp  job_queue.h
library-rocket/src/main/: application.cpp  application.h  command_line_argument_parser.cpp  command_line_argument_parser.h  engine_option_processor.cpp  engine_option_processor.h  rocket_consts.h  rocket_option_processor.cpp  rocket_option_processor.h
library-rocket/src/message/: message.cpp  message.h
library-tivan/: CMakeLists.txt
module-quill/: CMakeLists.txt
module-strange/: CMakeLists.txt
module-thanos/: CMakeLists.txt
modules/backend/: CMakeLists.txt
tool-tivan/: CMakeLists.txt  message-gen.pl
tool-tivan/generator/: generator.pl
tool-tivan/messages/: terra.json
tools/pmgen/: CMakeLists.txt
(+767 files in other folders)
